--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
-baseURL: https://hugo-toha.github.io
+baseURL: https://xpengs.com
 
 languageCode: en-us
-title: "John's Blog"
+title: "xpeng's page"
 theme: "toha"
 
 # Manage languages
@@ -10,12 +10,12 @@ languages:
   en:
     languageName: English
     weight: 1
-  bn:
-    languageName: বাংলা
-    weight: 3
+  #zh-cn:
+    #languageName: 中文
+    #weight: 2
 
 # Force a locale to be use, really useful to develop the application ! Should be commented in production, the "weight" should rocks.
-# DefaultContentLanguage: bn
+DefaultContentLanguage: en
 
 # Allow raw html in markdown file
 markup:
@@ -41,17 +41,17 @@ enableEmoji: true
 # Site parameters
 params:
   # Background image of the landing page
-  background: /images/site/background.jpg
-
+  background: /images/site/background2.png
+  backgroundvideo: /videos/bg.mp4
   # Provide logos for your site. The inverted logo will be used in the initial
   # transparent navbar and the main logo will be used in the non-transparent navbar.
   logo:
-    main: /images/site/main-logo.png
-    inverted: /images/site/inverted-logo.png
-    favicon: /images/site/favicon.png
+    main: /images/author/xpeng.png
+    inverted: /images/author/xpeng.png
+    favicon: /images/author/xpeng.png
 
   # GitHub repo of your site
-  gitRepo: https://github.com/hugo-toha/hugo-toha.github.io
+  gitRepo: https://github.com/xiaopeng12138/xpengs-page
   # Default branch of your Git repo
   gitBranch: main
 
@@ -72,7 +72,7 @@ params:
       enable: true
     # Enable and configure blog posts
     blog:
-      enable: true
+      enable: false
       # Share post on different social media
       shareButtons:
         facebook: true
@@ -88,44 +88,15 @@ params:
 
     # Enable & configure "Notes" features
     notes:
-      enable: true
+      enable: false
 
     # Enable comment feature. There, should be only one of them.
     comment:
       enable: false
-      disqus:
-        shortName: toha-example-site
-      # valine:
-      #   appId: HTV6askWxVo3vOxlqjjaq2hd-MsYXbMMI
-      #   appKey: pVrT3C85KGIuk27t07eh6bUC
-      #   avatar: retro
-      #   placeholder: Share your thought.
-      #   lang: en
-      #   recordIP: true
-      #   enableQQ: true
-      # utteranc:
-      #   repo: github.com/hugo-toha/hugo-toha.github.io
-      #   issueTerm: title
-      #   theme: github-light
-      # giscus:
-      #   repo: your-repo/name
-      #   repoID: your-repo-id
-      #   category: your-category
-      #   categoryID: your-category-id
-        # theme: light
-        # map: url
-        # reaction: 1
-        # metadata: 0
-        # inputPosition: bottom
-        # crossOrigin: anonymous
-      # commento:
-      #   serverURL: cdn.commento.io
-      #   autoInit: true
-      #   hideDeleted: false
 
     # Enable Analytics
     analytics:
-      enabled: true
+      enabled: false
       # Google Analytics
       google:
         id: G-H4LBG7NDFZ
@@ -159,9 +130,9 @@ params:
   showFlags: true
 
   # If you want to use different country flag for a language, specify them here.
-  # flagOverwrites:
-  # - languageCode: en
-  #   countryCode: us
+  flagOverwrites:
+  - languageCode: zh-cn
+    countryCode: cn
 
   # Provide footer configuration.
   footer:
@@ -173,7 +144,7 @@ params:
     navigation:
       enable: true
       # show custom menus in the footer
-      customMenus: true
+      customMenus: false
     # Show/hide "Contact Me" section in the footer. Default is "true".
     contactMe:
       enable: true
@@ -184,7 +155,7 @@ params:
     # Show/hide newsletter section in the footer. Default is "true".
     # Currently, it supports "mailchimp".
     newsletter:
-      enable: true
+      enable: false
       provider: mailchimp
       mailchimpURL: https://github.us1.list-manage.com/subscribe/post?u=19de52a4603135aae97163fd8&amp;id=094a24c76e
 
