--- a/data/en/site.yaml
+++ b/data/en/site.yaml
@@ -1,19 +1,18 @@
 # Copyright Notice
-copyright: © 2020 Copyright.
+copyright: Copyright © 2022 xpeng121 all rights reserved.
 
 # A disclaimer notice for the footer. Make sure you have set "params.footer.disclaimer.enable: true" in your `config.yaml` file.
-disclaimer: "This theme is under MIT license. So, you can use it for non-commercial, commercial, or private uses.
-You can modify or distribute the theme without requiring any permission from the theme author.
-However, the theme author does not provide any warranty or takes any liability for any issue with the theme."
+disclaimer: "This website is build with Hugo (Apache-2.0 license) and uses toha theme (MIT license). 
+We don't use any tracker. The only thing that will be stored on this server is your IP address which will be deleted after some time."
 
 # Meta description for your site.  This will help the search engines to find your site.
-description: Portfolio and personal blog of John Doe.
+description: A personal website of xpeng.
 
 # specify the list of custom menus that you want to show in the top navbar.
 # they will be separated by a divider from the main menus.
 customMenus:
-- name: Docs
-  url: https://toha-guides.netlify.app/posts/
+- name: 
+  url: 
   # specify whether to hide the menu item from top navbar or not.
   hideFromNavbar: false
   # specify whether to show the menu item in footer or not.
@@ -22,8 +21,8 @@ customMenus:
 
 # Specify OpenGraph Headers
 openGraph:
-  title: John's Blog
+  title: xpeng's Blog
   type: website
-  description: Portfolio and personal blog of John Doe.
-  image: images/author/john.png
-  url: https://hugo-toha.github.io
+  description: A personal website of xpeng.
+  image: images/author/xpeng.png
+  url: 
